Fix placeholder styling
Placeholder styling was being applied to components even
when the placeholder was not visible. This commit removes
custom placeholder styling in favor of browser defaults.

--- a/themes/src/main/themes/VAADIN/themes/base/textfield/textfield.scss
+++ b/themes/src/main/themes/VAADIN/themes/base/textfield/textfield.scss
@@ -13,9 +13,7 @@
 .v-textarea-focus {
 }
 input.#{$primaryStyleName}-prompt,
-textarea.v-textarea-prompt,
-input[placeholder],
-textarea[placeholder] {
+textarea.v-textarea-prompt {
 	color: #999;
 	font-style: italic;
 }
